--- a/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQWorkOderComplete.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQWorkOderComplete.storyboard
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p8v-lE-CXJ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="64"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="60"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="feP-yl-rnU">
-                                        <rect key="frame" x="186.5" y="2" width="1" height="60"/>
+                                        <rect key="frame" x="186.5" y="0.0" width="1" height="60"/>
                                         <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="CXb-MW-L4s"/>
@@ -33,16 +33,16 @@
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ww-4x-clV">
-                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="64"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTs-q1-f7e">
-                                                <rect key="frame" x="89" y="0.0" width="11" height="21"/>
+                                                <rect key="frame" x="89" y="3" width="11" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-zL-5oo">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="64"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-zL-5oo">
+                                                <rect key="frame" x="0.0" y="5" width="187.5" height="55"/>
                                                 <state key="normal" title="已完成">
                                                     <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
@@ -60,21 +60,21 @@
                                             <constraint firstAttribute="trailing" secondItem="f6c-zL-5oo" secondAttribute="trailing" id="MSC-zr-OZZ"/>
                                             <constraint firstItem="f6c-zL-5oo" firstAttribute="leading" secondItem="9Ww-4x-clV" secondAttribute="leading" id="OXO-Uh-qnU"/>
                                             <constraint firstItem="TTs-q1-f7e" firstAttribute="centerX" secondItem="9Ww-4x-clV" secondAttribute="centerX" id="OeN-Q5-k5j"/>
-                                            <constraint firstItem="TTs-q1-f7e" firstAttribute="top" secondItem="9Ww-4x-clV" secondAttribute="top" id="VFh-2V-ldf"/>
-                                            <constraint firstItem="f6c-zL-5oo" firstAttribute="top" secondItem="9Ww-4x-clV" secondAttribute="top" id="aqL-av-Jjk"/>
+                                            <constraint firstItem="TTs-q1-f7e" firstAttribute="top" secondItem="9Ww-4x-clV" secondAttribute="top" constant="3" id="VFh-2V-ldf"/>
+                                            <constraint firstItem="f6c-zL-5oo" firstAttribute="top" secondItem="9Ww-4x-clV" secondAttribute="top" constant="5" id="aqL-av-Jjk"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="laX-lA-oqX">
-                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="64"/>
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TjT-LE-gKc">
-                                                <rect key="frame" x="88.5" y="0.0" width="10.5" height="21"/>
+                                                <rect key="frame" x="88.5" y="3" width="10.5" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-2j-KGp">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="64"/>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-2j-KGp">
+                                                <rect key="frame" x="0.0" y="5" width="187.5" height="55"/>
                                                 <state key="normal" title="未完成">
                                                     <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
@@ -92,8 +92,8 @@
                                             <constraint firstItem="TjT-LE-gKc" firstAttribute="centerX" secondItem="laX-lA-oqX" secondAttribute="centerX" id="AcE-Gm-hOK"/>
                                             <constraint firstAttribute="bottom" secondItem="b7E-2j-KGp" secondAttribute="bottom" id="NQ9-zC-TeN"/>
                                             <constraint firstAttribute="trailing" secondItem="b7E-2j-KGp" secondAttribute="trailing" id="l4j-Ke-R5V"/>
-                                            <constraint firstItem="b7E-2j-KGp" firstAttribute="top" secondItem="laX-lA-oqX" secondAttribute="top" id="rbk-Jm-KTE"/>
-                                            <constraint firstItem="TjT-LE-gKc" firstAttribute="top" secondItem="laX-lA-oqX" secondAttribute="top" id="zKi-ap-EUf"/>
+                                            <constraint firstItem="b7E-2j-KGp" firstAttribute="top" secondItem="laX-lA-oqX" secondAttribute="top" constant="5" id="rbk-Jm-KTE"/>
+                                            <constraint firstItem="TjT-LE-gKc" firstAttribute="top" secondItem="laX-lA-oqX" secondAttribute="top" constant="3" id="zKi-ap-EUf"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -109,12 +109,12 @@
                                     <constraint firstAttribute="trailing" secondItem="laX-lA-oqX" secondAttribute="trailing" id="Uiy-kt-pDw"/>
                                     <constraint firstItem="laX-lA-oqX" firstAttribute="leading" secondItem="9Ww-4x-clV" secondAttribute="trailing" id="cjn-2C-ccU"/>
                                     <constraint firstItem="feP-yl-rnU" firstAttribute="centerY" secondItem="p8v-lE-CXJ" secondAttribute="centerY" id="fih-zN-OyH"/>
-                                    <constraint firstAttribute="height" constant="64" id="ruv-mn-ZKk"/>
+                                    <constraint firstAttribute="height" constant="60" id="ruv-mn-ZKk"/>
                                     <constraint firstItem="9Ww-4x-clV" firstAttribute="top" secondItem="p8v-lE-CXJ" secondAttribute="top" id="uq1-hd-uRs"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mn9-q5-eLo">
-                                <rect key="frame" x="0.0" y="84" width="375" height="539"/>
+                                <rect key="frame" x="0.0" y="80" width="375" height="543"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="workOrder" rowHeight="186" id="blL-El-Kxd" customClass="WorkOrderCell" customModule="OpticalValleyUnite" customModuleProvider="target">
