完善日志新增整体流程的实现(新增, 待办事项, 工作记录的联调)

--- a/OpticalValleyUnite/Classes/UI/Journal/View/YQWorkRecord.xib
+++ b/OpticalValleyUnite/Classes/UI/Journal/View/YQWorkRecord.xib
@@ -67,6 +67,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentLabel" destination="g9S-BY-lx9" id="a7F-jS-phc"/>
+                <outlet property="selectButton" destination="G76-On-xfW" id="sFE-uq-3TC"/>
                 <outlet property="timeLabel" destination="30Z-ql-OvG" id="pap-EJ-V8i"/>
             </connections>
             <point key="canvasLocation" x="-204.5" y="106"/>
