--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/AppraisalCell.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/AppraisalCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,15 +13,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="216" id="vBS-UG-Y7O" customClass="AppraisalCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="216"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="314" id="vBS-UG-Y7O" customClass="AppraisalCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="399" height="314"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vBS-UG-Y7O" id="vsd-Kb-F3x">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="215.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="399" height="313.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" placeholderIntrinsicWidth="336" placeholderIntrinsicHeight="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="a0i-rt-N6C">
-                        <rect key="frame" x="39" y="0.0" width="336" height="205.5"/>
+                        <rect key="frame" x="39" y="0.0" width="360" height="303.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已评价" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8u-ua-kes">
                                 <rect key="frame" x="12" y="10" width="46" height="18"/>
@@ -106,13 +106,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-11-11     16:48:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RdU-so-wAm">
-                                <rect key="frame" x="12" y="162" width="130" height="31.5"/>
+                                <rect key="frame" x="12" y="162" width="130" height="129.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评价理由: 修理完成后线程灯泡随手扔地上了" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tml-sT-fA8">
-                                <rect key="frame" x="12" y="70" width="312" height="18"/>
+                                <rect key="frame" x="12" y="70" width="336" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="zDc-tJ-4Th"/>
                                 </constraints>
@@ -130,10 +130,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFe-7Z-O1m" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="12" y="100" width="312" height="50"/>
+                                <rect key="frame" x="12" y="100" width="336" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="eXd-hk-wSh"/>
+                                    <constraint firstAttribute="height" constant="50" id="eXd-hk-wSh"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -165,7 +165,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OZV-X2-ckM">
-                        <rect key="frame" x="20" y="0.0" width="1" height="215.5"/>
+                        <rect key="frame" x="20" y="0.0" width="1" height="313.5"/>
                         <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="4SB-aa-m6w"/>
@@ -206,7 +206,7 @@
                 <outlet property="starsViews" destination="evc-hm-Zr8" id="782-1d-dwg"/>
                 <outlet property="timeLabel" destination="RdU-so-wAm" id="S93-b5-n7Q"/>
             </connections>
-            <point key="canvasLocation" x="30.5" y="103"/>
+            <point key="canvasLocation" x="42.5" y="152"/>
         </tableViewCell>
     </objects>
     <resources>
